# Convex_Symbolic

./: .gitignore  LICENSE  README.md  setup.py
cvx_sym/: __init__.py  canonicalize.py  constraints.py  conventions.py  errors.py  generate.py  problem.py  solution.py  sparse.py  symbolic.py  utilities.py
cvx_sym/operations/: __init__.py
cvx_sym/operations/atoms/: __init__.py  divs.py  muls.py  sums.py
cvx_sym/operations/functions/: __init__.py  matrix.py  norms.py  quads.py  radical.py  scalars.py  vectors.py
cvx_sym/templates/: CMakeLists.txt.jinja  __init__.py  main.c.jinja
cvx_sym/templates/functions/: __init__.py
cvx_sym/templates/main_set/: problem.c.jinja  problem.h.jinja
cvx_sym/templates/prob_set/: problem.c.jinja  problem.h.jinja
cvx_sym/tests/: test_ecos_solution.py  test_graph_form.py  test_matrix_form.py  test_relax_form.py  test_smith_form.py
examples/readme_example/: CMakeLists.txt  main.c  problem.c  problem.h
examples/readme_example/ecos/include/: cone.h  kkt.h  splamm.h
examples/readme_example/ecos/src/: cone.c  runecos_exp.c  splamm.c
examples/readme_example/ecos/test/LPnetlib/: lp_25fv47.h  lp_agg.h  lp_bandm.h  lp_beaconfd.h  lp_blend.h
examples/readme_example/ecos/test/cvxpyProblems/: githubIssue98.h
examples/readme_example/ecos/test/emptyProblem/: emptyProblem.h
examples/readme_example/ecos/test/exponential/: random_unbounded.h
examples/readme_example/ecos/test/infeasibleProblems/: infeasible1.h  infeasible2.h
examples/readme_example/ecos/test/unboundedProblems/: unboundedMaxSqrt.h
(+47 files in other folders)
